--- a/Calender/main.html
+++ b/Calender/main.html
@@ -10,8 +10,8 @@
 </head> 
 <body>
     <section>
-        <div class="box">
-            <div class="container">
+        <div class="Box">
+            <div class="Container">
                 <div id="dycalendar"></div>
             </div>
         </div>
